# FYP-VehicleSensorFusion

./: .gitignore  .gitmodules  README.md  fyp.sublime-workspace  install.sh
but_calibration_camera_velodyne/conf/: calibration.yaml  coloring.yaml
but_calibration_camera_velodyne/include/but_calibration_camera_velodyne/: Calibration.h
but_calibration_camera_velodyne/launch/: calibration_coarse.launch  calibration_fine.launch  coloring.launch
but_calibration_camera_velodyne/src/: Calibration3DMarker.cpp  Velodyne.cpp  calibration-node.cpp  coloring-node.cpp
car_detection/: CMakeLists.txt  package.xml
car_detection/msg/: Detected_Img.msg
car_detection/scripts/: car_detection_py.py
docs/: .directory
face_detection/: CMakeLists.txt  package.xml
face_detection/msg/: Bbox.msg  Detected_Img.msg
face_detection/scripts/: face_detection_py.py
face_detection/src/: face_detection.cpp  face_detection_cpp.cpp
phone_streams/: CMakeLists.txt  package.xml
phone_streams/calibration/: pixel_1.xml
phone_streams/msg/: Framerates.msg
phone_streams/scripts/: phone_frames_counter.py  phone_streams_publisher.py
ros_ws/devel/: .catkin  .rosinstall  setup.sh
ros_ws/install/: setup.sh
video_transport/: CMakeLists.txt  package.xml
video_transport/conf/: calibration.yaml
video_transport/include/but_calibration_camera_velodyne/: Velodyne.h
video_transport/src/: Velodyne.cpp  ctest.cpp  pointcloud_publisher(original).cpp  pointcloud_publisher.cpp  video_publisher.cpp  video_subscriber.cpp  video_subscriber_sync.cpp
visualization/: CMakeLists.txt  package.xml
visualization/conf/: pointclouds_to_join.yaml
visualization/include/but_calibration_camera_velodyne/: Velodyne.h
visualization/launch/: join_pointclouds.launch
visualization/src/: Velodyne.cpp  join_pointclouds.cpp  video_visualization.cpp
